--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">CCR Microsystems</div>
-                <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
-                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+                <div class="masthead-subheading">CCR MICROSYSTEMS<br><br><br><br></div>
+                <div class="masthead-heading text-uppercase"></div>
             </div>
         </header>
         <!-- Services-->
