--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/img/navbar-logo.svg" alt="" /></a>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/img/11th-gen-core-i7-processors-badge-rwd.png.rendition.intel.web.225.225.png" alt="" /></a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ml-1"></i>
@@ -39,8 +39,8 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">CCR MICROSYSTEMS<br><br><br><br></div>
-                <div class="masthead-heading text-uppercase"></div>
+                <div class="masthead-subheading">
+                <div class="masthead-heading text-uppercase">CCR MICROSYSTEMS</div>
             </div>
         </header>
         <!-- Services-->
