--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>CCR MICROSYSTEMS</title>
+  <title>CCR MICRO</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -38,7 +38,13 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">CCR<br>MICROSYSTEMS</h1>
+          <h1 class="mb-5">COMPUTER REPAIR SERVICE TORONTO
+              <br><br>
+              &#8226; Same Day Service
+              <br>
+              &#8226; Free Estimates
+              <br>
+            </h1>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <form>
@@ -64,7 +70,11 @@
               <i class="icon-screen-desktop m-auto text-primary"></i>
             </div>
             <h3>Computer Repair</h3>
-            <p class="lead mb-0">We provide repairs, upgrades, and maintenance services. OS installation and data recovery. Professionals that require performance when it counts</p>
+            <p class="lead mb-0">
+                Harware Trouble <br>
+                Printer Issues <br>
+                Viruses &amp; Malware <br>
+                Data recovery </p>
           </div>
         </div>
         <div class="col-lg-4">
@@ -72,8 +82,13 @@
             <div class="features-icons-icon d-flex">
               <i class="icon-layers m-auto text-primary"></i>
             </div>
-            <h3>Security</h3>
-            <p class="lead mb-0"> Cybersecurity experts in Advisory Consulting, Architecture, Installation, Identity &amp; Access Management, Managed Security Services &amp; Incident Response. Malware removal &amp; Penetration testing services.</p>
+            <h3>Cybersecurity</h3>
+            <p class="lead mb-0">
+                Managed Security <br>
+                Incident Response <br>
+                Malware removal <br>
+                Penetration testing
+                </p>
           </div>
         </div>
         <div class="col-lg-4">
@@ -82,7 +97,12 @@
               <i class="icon-check m-auto text-primary"></i>
             </div>
             <h3>Design Build</h3>
-            <p class="lead mb-0">Ready to get to the next level of computing? Computer animation professionals, game developers, videographers shooting and editing ultra HD 4K video?</p>
+            <p class="lead mb-0">
+                Computer Animation <br>
+                Developers/Programmers <br>
+                Photographers &amp; Videographers <br>
+                Graphic Arts &amp; Gaming
+              </p>
           </div>
         </div>
       </div>
@@ -94,28 +114,42 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
 
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/header.png');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/header.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Expert Computer Solutions</h2>
-          <p class="lead mb-0">Computers and laptops needs to be serviced regularly, we provide repairs, upgrades, and maintenance. Installing a new operating system can be frustrating, upgrading the hardware is difficult for most and sometimes computers crash, or get viruses, or simply stop working.<br><br>
+          <h2>Expert Computer Solutions >_</h2>
+          <p class="lead mb-0">
+                Computers and laptops need regular service. We provide repairs, upgrades, and maintenance. Installing a new operating  system can be frustrating, upgrading hardware and sometimes computers crash, or get viruses, or simply stop working.
+                <br><br>
 
-          We are expert computer technicians that provide a wide variety of services to keep your computer operating at it's absolute best. No matter what, we can fix it, Broken hardware, sluggish performance? We can diagnose your desktop or laptop effectivly &amp; repair within your budget.</p>
+                Our expert computer repair technicians provide a wide variety of services to keep your computer or workstation operating at it's best. Computer problems hurting productivity? We can fix it, Broken hardware, sluggish performance? We can diagnose your desktop or laptop effectivly &amp; repair it to get you back to work!
+            </p>
         </div>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/1673381.jpg');"></div>
         <div class="col-lg-6 my-auto showcase-text">
-          <h2>Cybersecurity</h2>
+          <h2>Cybersecurity >_</h2>
           <p class="lead mb-0">
-              Our cybersecurity consulting services help organizations of all sizes improve operational cybersecurity. Whether your need is strategic, tactical or operational, our experts offer solutions tailored to the reality and issues specific to your organization. We offer Penetration Testing, Vulnerability Scans, Web Application, Network, Mobile &amp; IOT testing. Malware analysis and reverse engineering services. Social engineering &amp; OSINT. Data recovery and secure data destruction technologies.<br><br>
-              Security expert labs, strategy, risk and compliance services. Firewall configuration, cybersecurity auditing &amp; Zero Trust services. Assess, reduce and manage your security risk. Protect your business, data, users and assets. Identify and respond to threats quickly and confidently. Incident response and Intelligence services. </p>
+              Our cybersecurity consulting services help organizations of all sizes improve operational cybersecurity. Whether your need is strategic, tactical or operational, our experts offer solutions tailored to the reality and issues specific to your organization. <br><br>
+              We offer Penetration Testing, Vulnerability Scans, Web Application, Network, Mobile &amp; IOT testing. Malware analysis and reverse engineering services. Social engineering &amp; OSINT.
+              Data recovery and secure data destruction technologies.
+              <br><br>
+              Security expert labs, strategy, risk and compliance services. Firewall configuration, cybersecurity auditing &amp; Zero Trust services. Protect your business, data, users and assets.
+              <br><br>
+              Assess, reduce and manage your security risk.  Identify and respond to threats quickly and confidently. Incident response and Intelligence services.
+            </p>
         </div>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/custom-pc.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Design Build</h2>
-          <p class="lead mb-0">We know professionals seek solutions that are as customizable as they are powerful. Our options include full tower, mid tower, small form factor, and rackmount configurations, all of which can be configured to utilize the latest industry-leading components.<br><br> Intel or AMD, NVIDIA or AMD Graphics. Our custom PCs are not only fully customizable, they provide a tremendous amount of flexibility. Options such as single, dual or quad GPU's, watercooling &amp; premium case options. Whether you need a custom design workstation, a HPC or a corporate enterprise server, our PCs are ready to deliver the power and performance you need to get the job done. We also can provide 24/7 technical support and we’re always ready to answer your questions so you can focus on being productive.</p>
+          <p class="lead mb-0">
+              We know professionals seek solutions that are as customizable as they are powerful. Our options include full tower, mid tower, small form factor, and rackmount configurations, all of which can be configured to utilize the latest industry-leading components.<br><br> 
+              Intel or AMD, NVIDIA or AMD Graphics. Our custom PCs are not only fully customizable, they provide a tremendous amount of flexibility. Options such as single, dual or quad GPU's, watercooling &amp; premium case options. 
+              <br><br>
+              Whether you need a custom design workstation, HPC or a corporate enterprise server, our PCs are ready to deliver the power and performance you need to get the job done. We also can provide 24/7 technical support &amp; We’re always ready to answer your questions so you can focus on being productive.
+            </p>
         </div>
       </div>
     </div>
@@ -172,17 +206,17 @@
           <ul class="list-inline mb-0">
             <li class="list-inline-item mr-3">
               <a href="#">
-                <i class="fab fa-facebook fa-2x fa-fw"></i>
+                <i class=""></i>
               </a>
             </li>
             <li class="list-inline-item mr-3">
               <a href="#">
-                <i class="fab fa-twitter-square fa-2x fa-fw"></i>
+                <i class=""></i>
               </a>
             </li>
             <li class="list-inline-item">
               <a href="#">
-                <i class="fab fa-instagram fa-2x fa-fw"></i>
+                <i class=""></i>
               </a>
             </li>
           </ul>
