--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
             <h3>Computer Repair</h3>
             <p class="lead mb-0">
-                Harware Trouble <br>
+                Hardware Troubles <br>
                 Printer Issues <br>
                 Viruses &amp; Malware <br>
                 Data recovery </p>
