--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Expert Computer Solutions >_</h2>
           <p class="lead mb-0">
-                Computers and laptops need regular service. We provide repairs, upgrades, and maintenance. Installing a new operating  system can be frustrating, upgrading hardware and sometimes computers crash, or get viruses, or simply stop working.
-                <br><br>
+            Computers and laptops need regular service. We provide repairs, upgrades, and maintenance. Installing a new operating system can be frustrating, upgrading hardware and sometimes computers crash, or get viruses, or simply stop working.
+            <br><br>
 
-                Our expert computer repair technicians provide a wide variety of services to keep your computer or workstation operating at it's best. Computer problems hurting productivity? We can fix it, Broken hardware, sluggish performance? We can diagnose your desktop or laptop effectivly &amp; repair it to get you back to work!
+            Our expert computer repair technicians provide a wide variety of services to keep your computer or workstation operating at its absolute best. Computer problems hurting productivity. We can fix it, Broken hardware, sluggish performance? We can diagnose your desktop or laptop effectively &amp; repair it to get you back to work!
             </p>
         </div>
       </div>
@@ -130,13 +130,14 @@
         <div class="col-lg-6 my-auto showcase-text">
           <h2>Cybersecurity >_</h2>
           <p class="lead mb-0">
-              Our cybersecurity consulting services help organizations of all sizes improve operational cybersecurity. Whether your need is strategic, tactical or operational, our experts offer solutions tailored to the reality and issues specific to your organization. <br><br>
-              We offer Penetration Testing, Vulnerability Scans, Web Application, Network, Mobile &amp; IOT testing. Malware analysis and reverse engineering services. Social engineering &amp; OSINT.
-              Data recovery and secure data destruction technologies.
-              <br><br>
-              Security expert labs, strategy, risk and compliance services. Firewall configuration, cybersecurity auditing &amp; Zero Trust services. Protect your business, data, users and assets.
-              <br><br>
-              Assess, reduce and manage your security risk.  Identify and respond to threats quickly and confidently. Incident response and Intelligence services.
+            Our cybersecurity consulting services help organizations of all sizes improve operational cybersecurity. Whether your need is strategic, tactical or operational, our experts offer solutions tailored to the reality and issues specific to your organization.
+            <br><br>
+            We offer Penetration Testing, Vulnerability Scans, Web Application, Network, Mobile &amp; IOT testing. Malware analysis and reverse engineering services. Data recovery and secure data destruction technologies. Social engineering &amp; OSINT.
+            <br><br>
+            Assess, reduce and manage your security risk.  Identify and respond to threats quickly and confidently. Incident response and Intelligence services.
+            <br><br>
+            Security expert labs, strategy, risk and compliance services. Firewall configuration, cybersecurity auditing &amp; Zero Trust services. Protect your business, data, users and assets.
+            
             </p>
         </div>
       </div>
@@ -145,17 +146,18 @@
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Design Build</h2>
           <p class="lead mb-0">
-              We know professionals seek solutions that are as customizable as they are powerful. Our options include full tower, mid tower, small form factor, and rackmount configurations, all of which can be configured to utilize the latest industry-leading components.<br><br> 
-              Intel or AMD, NVIDIA or AMD Graphics. Our custom PCs are not only fully customizable, they provide a tremendous amount of flexibility. Options such as single, dual or quad GPU's, watercooling &amp; premium case options. 
-              <br><br>
-              Whether you need a custom design workstation, HPC or a corporate enterprise server, our PCs are ready to deliver the power and performance you need to get the job done. We also can provide 24/7 technical support &amp; We’re always ready to answer your questions so you can focus on being productive.
+            We know professionals seek solutions that are as customizable as they are powerful. Our options include full tower, mid tower, small form factor, and rackmount configurations, all of which can be configured to utilize the latest industry-leading components.
+            <br><br>
+            Intel or AMD, NVIDIA or AMD Graphics. Our custom PCs are not only fully customizable, but they also provide a tremendous amount of flexibility. Options such as single, dual or quad GPU's, water-cooling &amp; premium case options.
+            <br><br>
+            Whether you need a custom design workstation, HPC or a corporate enterprise server, our PC's are ready to deliver the power and performance you need to get the job done. We also can provide 24/7 technical support &amp; We are always ready to answer your questions so you can focus on being productive.
             </p>
         </div>
       </div>
     </div>
   </section>
 
-
+  
   <!-- Call to Action -->
   <section class="call-to-action text-white text-center">
     <div class="overlay"></div>
