add contact page

--- a/index.html
+++ b/index.html
@@ -144,17 +144,26 @@
       <div class="row no-gutters">
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/custom-pc.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Design Build</h2>
+          <h2>Computer Design Build >_</h2>
           <p class="lead mb-0">
             We know professionals seek solutions that are as customizable as they are powerful. Our options include full tower, mid tower, small form factor, and rackmount configurations, all of which can be configured to utilize the latest industry-leading components.
             <br><br>
-            Intel or AMD, NVIDIA or AMD Graphics. Our custom PCs are not only fully customizable, but they also provide a tremendous amount of flexibility. Options such as single, dual or quad GPU's, water-cooling &amp; premium case options.
+            Intel or AMD, NVIDIA or AMD Graphics. Our custom PC's are not only fully customizable, but they also provide a tremendous amount of flexibility. Options such as single, dual or quad GPU's, water-cooling &amp; premium case options.
             <br><br>
             Whether you need a custom design workstation, HPC or a corporate enterprise server, our PC's are ready to deliver the power and performance you need to get the job done. We also can provide 24/7 technical support &amp; We are always ready to answer your questions so you can focus on being productive.
             </p>
         </div>
       </div>
     </div>
+      <div class="row no-gutters">
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/network-1612502149690-5961.jpg');"></div>
+        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+          <h2>Network Design >_</h2>
+          <p class="lead mb-0">
+            something about networks
+            </p>
+        </div>
+      </div>
   </section>
 
   
@@ -191,7 +200,7 @@
             </li>
             <li class="list-inline-item">&sdot;</li>
             <li class="list-inline-item">
-              <a href="#">Contact</a>
+              <a href="./contact.md">Contact</a>
             </li>
             <li class="list-inline-item">&sdot;</li>
             <li class="list-inline-item">
