--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             </li>
             <li class="list-inline-item">&sdot;</li>
             <li class="list-inline-item">
-              <a href="./contact.md">Contact</a>
+              <a href="./contact.html">Contact</a>
             </li>
             <li class="list-inline-item">&sdot;</li>
             <li class="list-inline-item">
