--- a/index.html
+++ b/index.html
@@ -160,8 +160,14 @@
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Network Design >_</h2>
           <p class="lead mb-0">
-            something about networks
-            </p>
+            Our Network designers ensure that your communications network can adjust to the scale and demands of your environment.
+            <br><br>
+          We work to create networks that are available 100% of the time. We design networks with maximum performance ensuring automatic information network security using expert hierarchical network design principles and an organized design methodology, our designers create networks that are both manageable and supportable.
+          <br><br>
+          Today, the Internet-based economy often demands around-the-clock customer service. This means that business networks must be available nearly 100 percent of the time. They must be smart enough to automatically protect against unexpected security incidents. These business networks must also be able to adjust to changing traffic loads to maintain consistent application response times. It is no longer practical to construct networks by connecting many standalone components without careful planning and design.
+          <br><br>
+          Our Network engineers will design and implement a network topology that will fit within your environment and budget. <a href="/contact.html">Contact Us</a> today for all your networking needs. We use state of the art wired and wireless technology to keep you connected.
+          </p>
         </div>
       </div>
   </section>
@@ -173,7 +179,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h2 class="mb-4">Ready to get started? Contact us now!</h2>
+          <h2 class="mb-4">Ready to get started? <a href="/contact.html">Contact Us now!</a></h2>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <form>
