fix network section

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       </div>
     </div>
       <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/network-1612502149690-5961.jpg');"></div>
+        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/network-1612502149690-5961.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Network Design >_</h2>
           <p class="lead mb-0">
