--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             </li>
             <li class="list-inline-item">&sdot;</li>
             <li class="list-inline-item">
-              <a href="#">Privacy Policy</a>
+              <a href="/privacy.html">Privacy Policy</a>
             </li>
           </ul>
           <p class="text-muted small mb-4 mb-lg-0">&copy; CCR MICROSYSTEMS INC 2021. All Rights Reserved.</p>
