--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
+  <!-- Navigation -->
+  <nav class="navbar navbar-light bg-light static-top">
+    <div class="container">
+      <a class="navbar-brand" href="/index.html">CCR MICROSYSTEMS</a>
+    </div>
+  </nav>
 <head>
 
   <meta charset="utf-8">
@@ -82,15 +87,15 @@
             </li>
             <li class="list-inline-item">&sdot;</li>
             <li class="list-inline-item">
-              <a href="./contact.html">Contact</a>
+              <a href="./services.html">Services</a>
             </li>
             <li class="list-inline-item">&sdot;</li>
             <li class="list-inline-item">
-              <a href="#">Terms of Use</a>
+              <a href="/contact.html">Contact</a>
             </li>
             <li class="list-inline-item">&sdot;</li>
             <li class="list-inline-item">
-              <a href="#">Privacy Policy</a>
+              <a href="/privacy.html">Privacy Policy</a>
             </li>
           </ul>
           <p class="text-muted small mb-4 mb-lg-0">&copy; CCR MICROSYSTEMS INC 2021. All Rights Reserved.</p>
