--- a/services.html
+++ b/services.html
@@ -30,37 +30,73 @@
       <a class="navbar-brand" href="/index.html">CCR MICROSYSTEMS</a>
     </div>
   </nav>
-
   <!-- Masthead -->
   <header class="masthead text-white text-center">
     <div class="overlay"></div>
     <div class="container">
     </div>
   </header>
-  <!-- Image Showcases -->
-  <section class="showcase">
-    <div class="container-fluid p-0">
-      </div>
-      <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Website Privacy Statement</h2><br>
-          <p class="lead mb-0">
-            CCR Microsystems, CCR Micro is committed to protecting the privacy and accuracy of confidential information to the extent possible, subject to provisions of provincial and federal law. Other than as required by laws that guarantee public access to certain types of information, or in response to subpoenas or other legal instruments that authorize access, personally-identifiable information is not actively shared. In particular, we do not re-distribute or sell personal information collected on our web servers.
-            <br><br>
-            Our web servers collect the following information: Internet Protocol (IP) address of computer being used; web pages requested; referring web page; browser used; date and time; and statistics identifying particular IP addresses from which our websites are accessed. CCR does not associate this data to individual user identities.
-
-            This website is not intended to handle confidential information. If you need to discuss a confidential matter, refer to the <a href="/contact.html">Contact Us</a> page to contact any of our staff directly.
-            <br><br>
-            We do not collect any cookies. We will only use personal information collected from this site for the purpose of communication back to individuals who contact us via the site.
-            <br><br>
-            We will not disclose, without your consent, personal information collected about you, except for certain explicit circumstances in which disclosure is required by law.
-
-            We will not distribute or sell personal information to third-party organizations.
-
-            Access to your own information: Questions regarding users’ rights to review, modify or delete their previously provided personal information should be directed to ccrmicro@pm.me
-          </p>
+     <!-- Icons Grid -->
+  <section class="features-icons bg-light text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-screen-desktop m-auto text-primary"></i>
+            </div>
+            <h3>Computer Repair</h3>
+            <p class="lead mb-0">
+                Hardware Troubles <br>
+                Printer Issues <br>
+                Viruses &amp; Malware <br>
+                Data recovery <br>
+                Network Design <br>
+                Remote Support <br>
+                Hardware &amp; Software <br>
+                Onsite Service &amp; Repair
+              </p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-layers m-auto text-primary"></i>
+            </div>
+            <h3>Cybersecurity</h3>
+            <p class="lead mb-0">
+                Managed Security <br>
+                Incident Response <br>
+                Malware removal <br>
+                Penetration testing <br>
+                Vulnerability Scans <br>
+                Social engineering <br>
+                Digital Forensics <br>
+                OSINT <br>
+                </p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-check m-auto text-primary"></i>
+            </div>
+            <h3>Design Build</h3>
+            <p class="lead mb-0">
+                Water Cooled Systems <br>
+                Rackmounts &amp; Towers <br>
+                High Performance Workstations <br>
+                Corporate Workstations <br>
+                Home Theatre PC's <br> 
+                IOT Devices <br>
+                Wireless Devices <br>
+                CCTV &amp; Security
+                Audio &amp; Visual <br>
+              </p>
+          </div>
         </div>
       </div>
+    </div>
   </section>
 
   
