--- a/index.html
+++ b/index.html
@@ -38,12 +38,11 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">COMPUTER REPAIR SERVICE TORONTO
+          <h1 class="mb-5">COMPUTER SERVICE TORONTO
               <br><br>
-              &#8226; Same Day Service
-              <br>
-              &#8226; Free Estimates
-              <br>
+              &#43; Same Day Service <br>
+              &#43; Free Estimates <br>
+              &#43; Contactless Service <br>
             </h1>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
@@ -121,7 +120,8 @@
             Computers and laptops need regular service. We provide repairs, upgrades, and maintenance. Installing a new operating system can be frustrating, upgrading hardware and sometimes computers crash, or get viruses, or simply stop working.
             <br><br>
 
-            Our expert computer repair technicians provide a wide variety of services to keep your computer or workstation operating at its absolute best. Computer problems hurting productivity. We can fix it, Broken hardware, sluggish performance? We can diagnose your desktop or laptop effectively &amp; repair it to get you back to work!
+            Our expert computer repair technicians provide a wide variety of services to keep your computer or workstation operating at its absolute best. Computer problems hurting productivity. We can fix it, Broken hardware, sluggish performance? We can diagnose your desktop or laptop effectively &amp; repair it to get you back to work! <br><br>
+            Visit our <a href="/contact.html">Services</a> page!
             </p>
         </div>
       </div>
