--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <br><br>
 
             Our expert computer repair technicians provide a wide variety of services to keep your computer or workstation operating at its absolute best. Computer problems hurting productivity. We can fix it, Broken hardware, sluggish performance? We can diagnose your desktop or laptop effectively &amp; repair it to get you back to work! <br><br>
-            Visit our <a href="/contact.html">Services</a> page!
+            Visit our <a href="/services.html">Services</a> page!
             </p>
         </div>
       </div>
