--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,12 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-      <a class="navbar-brand" href="/index.html">CCR MICROSYSTEMS</a>
+      <a class="navbar-brand" href="/index.html">CCR MICROSYSTEMS</a><div class="topnav" align=right>
+  <a class="active" href="/index.html">Home</a>
+  <a href="/services.html">Services</a>
+  <a href="/contact.html">Contact</a>
+  <a href="/privacy.html">Privacy Policy</a>
+</div>
     </div>
   </nav>
 <head>
