--- a/contact.html
+++ b/contact.html
@@ -52,12 +52,10 @@
                 <br>
                 <a href="https://discord.gg/q33E8VzdqW" target="_blank"><img src="https://img.shields.io/static/v1?label=Message Us!&message=DISCORD&color=blueviolet" alt="Email"></a>
             </p>
-          </div>
-        </div>
-      </div>
     </div>
   </section>
-    <div style="width: 100%"><iframe width="100%" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=500&amp;hl=en&amp;q=North%20York,%20Ontario,%20Canada+(CCR%20Mircosystems)&amp;t=&amp;z=11&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://ccrmicro.com/contact.html">Contact</a></div>
+    <div style="width: 100%"><iframe width="100%" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=500&amp;hl=en&amp;q=North%20York,%20Ontario,%20Canada+(CCR%20Mircosystems)&amp;t=&amp;z=11&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+    </div>
   <!-- Call to Action -->
   <section class="call-to-action text-white text-center">
     <div class="overlay"></div>
