update nav - fix services

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
       <a class="navbar-brand" href="/index.html">CCR MICROSYSTEMS</a><div class="topnav" align=right>
-  <a class="active" href="/index.html">Home</a>
-  <a href="/services.html">Services</a>
+  <a class="active" href="/index.html">Home &#8226;</a>
+  <a href="/services.html">Services &#8226;</a>
   <a href="/contact.html">Contact</a>
 </div>
     </div>
